--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <li class="nav__li">Products</li>
         <li class="nav__li">Support</li>
       </ul>
-      <i class="fas fa-bars" class="nav__menu"></i>
+      <i class="fas fa-bars fa-2x nav__menu"></i>
     </nav>
     <h1 class="hero__title">Immersive experiences that deliver</h1>
   </div>
@@ -31,7 +31,7 @@
   <div class="feature">
     <img src="/images/mobile/image-interactive.jpg" alt="person doing interactive vr" class="feature__image mobile-image">
     <img src="/images/desktop/image-interactive.jpg" alt="person doing interactive vr" class="feature__image desktop-image">
-    <div class="feature__title">The leader in interactive VR</div>
+    <h2 class="feature__title">The leader in interactive VR</h2>
     <p class="feature__text">
       Founded in 2011, Loopstudios has been producing world-class virtual reality
       projects for some of the best companies around the globe. Our award-winning
