--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
   <div class="hero">
     <nav class="nav">
       <img src="/images/logo.svg" alt="loopstudios logo" class="nav__logo">
-      <ul class="nav__ul">
-        <li class="nav__li">About</li>
-        <li class="nav__li">Careers</li>
-        <li class="nav__li">Events</li>
-        <li class="nav__li">Products</li>
-        <li class="nav__li">Support</li>
-      </ul>
-      <i class="fas fa-bars fa-2x nav__menu"></i>
+      <div class="nav__links">
+        <a href="#" class="nav__li">About</a>
+        <a href="#" class="nav__li">Careers</a>
+        <a href="#" class="nav__li">Events</a>
+        <a href="#" class="nav__li">Products</a>
+        <a href="#" class="nav__li">Support</a>
+        </div>
+      <img src="/images/icon-hamburger.svg" alt="Select menu" class="nav__menu">
     </nav>
     <h1 class="hero__title">Immersive experiences that deliver</h1>
   </div>
@@ -31,13 +31,15 @@
   <div class="feature">
     <img src="/images/mobile/image-interactive.jpg" alt="person doing interactive vr" class="feature__image mobile-image">
     <img src="/images/desktop/image-interactive.jpg" alt="person doing interactive vr" class="feature__image desktop-image">
-    <h2 class="feature__title">The leader in interactive VR</h2>
-    <p class="feature__text">
-      Founded in 2011, Loopstudios has been producing world-class virtual reality
-      projects for some of the best companies around the globe. Our award-winning
-      creations have transformed businesses through digital experiences that bind
-      to their brand.
-    </p>
+    <div class="feature__content">
+      <h2 class="feature__title">The leader in interactive VR</h2>
+      <p class="feature__text">
+        Founded in 2011, Loopstudios has been producing world-class virtual reality
+        projects for some of the best companies around the globe. Our award-winning
+        creations have transformed businesses through digital experiences that bind
+        to their brand.
+      </p>
+    </div>
   </div>
 
   <div class="creations">
@@ -99,17 +101,17 @@
   <footer class="footer">
     <img src="/images/logo.svg" alt="loopstudios logo" class="footer__logo">
     <ul class="footer__links">
-      <li class="footer__link">About</li>
-      <li class="footer__link">Careers</li>
-      <li class="footer__link">Events</li>
-      <li class="footer__link">Products</li>
-      <li class="footer__link">Support</li>
+      <a href="#" class="footer__link">About</a>
+      <a href="#" class="footer__link">Careers</a>
+      <a href="#" class="footer__link">Events</a>
+      <a href="#" class="footer__link">Products</a>
+      <a href="#" class="footer__link">Support</a>
     </ul>
     <div class="footer__socials">
-      <i class="fab fa-facebook-square" class="footer__social-icon"></i>
-      <i class="fab fa-twitter" class="footer__social-icon"></i>
-      <i class="fab fa-pinterest" class="footer__social-icon"></i>
-      <i class="fab fa-instagram" class="footer__social-icon"></i>
+      <img src="/images/icon-facebook.svg" alt="Facebook icon" class="footer__social-icon">
+      <img src="/images/icon-twitter.svg" alt="Twitter icon" class="footer__social-icon">
+      <img src="/images/icon-pinterest.svg" alt="Pinterest icon" class="footer__social-icon">
+      <img src="/images/icon-instagram.svg" alt="Instagram icon" class="footer__social-icon">
     </div>
     <p class="footer__text">© 2021 Loopstudios. All rights reserved.</p>
   </footer>
