Finished desktop styling, added JavaScript

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
   <div class="hero">
     <nav class="nav">
       <img src="/images/logo.svg" alt="loopstudios logo" class="nav__logo">
-      <div class="nav__links">
+      <div class="nav__links active">
         <a href="#" class="nav__li">About</a>
         <a href="#" class="nav__li">Careers</a>
         <a href="#" class="nav__li">Events</a>
         <a href="#" class="nav__li">Products</a>
         <a href="#" class="nav__li">Support</a>
         </div>
-      <img src="/images/icon-hamburger.svg" alt="Select menu" class="nav__menu">
+      <img src="/images/icon-hamburger.svg" alt="Select menu" class="nav__menu ">
     </nav>
     <h1 class="hero__title">Immersive experiences that deliver</h1>
   </div>
@@ -116,5 +116,6 @@
     <p class="footer__text">© 2021 Loopstudios. All rights reserved.</p>
   </footer>
 
+  <script src="/app.js"></script>
 </body>
 </html>
