Finished JavaScript, refined CSS styling

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <div class="hero">
     <nav class="nav">
       <img src="/images/logo.svg" alt="loopstudios logo" class="nav__logo">
-      <div class="nav__links active">
+      <div class="nav__links ">
         <a href="#" class="nav__li">About</a>
         <a href="#" class="nav__li">Careers</a>
         <a href="#" class="nav__li">Events</a>
