Final styling changes

--- a/index.html
+++ b/index.html
@@ -1,121 +1,223 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Alata&family=Josefin+Sans:wght@300&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="/css/style.css">
-  <title>Frontend Mentor | Loopstudios landing page</title>
-</head>
-<body>
-
-  
-  <div class="hero">
-    <nav class="nav">
-      <img src="/images/logo.svg" alt="loopstudios logo" class="nav__logo">
-      <div class="nav__links ">
-        <a href="#" class="nav__li">About</a>
-        <a href="#" class="nav__li">Careers</a>
-        <a href="#" class="nav__li">Events</a>
-        <a href="#" class="nav__li">Products</a>
-        <a href="#" class="nav__li">Support</a>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Alata&family=Josefin+Sans:wght@300&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
+      integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog=="
+      crossorigin="anonymous"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <link rel="stylesheet" href="/css/style.css" />
+    <title>Frontend Mentor | Loopstudios landing page</title>
+  </head>
+  <body>
+    <div class="hero">
+      <nav class="nav">
+        <img src="/images/logo.svg" alt="loopstudios logo" class="nav__logo" />
+        <div class="nav__links">
+          <a href="#" class="nav__li">About</a>
+          <a href="#" class="nav__li">Careers</a>
+          <a href="#" class="nav__li">Events</a>
+          <a href="#" class="nav__li">Products</a>
+          <a href="#" class="nav__li">Support</a>
         </div>
-      <img src="/images/icon-hamburger.svg" alt="Select menu" class="nav__menu ">
-    </nav>
-    <h1 class="hero__title">Immersive experiences that deliver</h1>
-  </div>
-
-  <div class="feature">
-    <img src="/images/mobile/image-interactive.jpg" alt="person doing interactive vr" class="feature__image mobile-image">
-    <img src="/images/desktop/image-interactive.jpg" alt="person doing interactive vr" class="feature__image desktop-image">
-    <div class="feature__content">
-      <h2 class="feature__title">The leader in interactive VR</h2>
-      <p class="feature__text">
-        Founded in 2011, Loopstudios has been producing world-class virtual reality
-        projects for some of the best companies around the globe. Our award-winning
-        creations have transformed businesses through digital experiences that bind
-        to their brand.
-      </p>
+        <img
+          src="/images/icon-hamburger.svg"
+          alt="Select menu"
+          class="nav__menu"
+        />
+      </nav>
+      <h1 class="hero__title">Immersive experiences that deliver</h1>
     </div>
-  </div>
 
-  <div class="creations">
-    <h2 class="creations__title">Our creations</h2>
-    <button class="creations__button">See all</button>
-    <div class="creations__cards">
-
-      <div class="creations__card">
-        <h3 class="creations__card__title">Deep earth</h3>
-        <img src="/images/mobile/image-deep-earth.jpg" alt="earth" class="creations__card__image mobile-image">
-        <img src="/images/desktop/image-deep-earth.jpg" alt="earth" class="creations__card__image desktop-image">
+    <div class="feature">
+      <img
+        src="/images/mobile/image-interactive.jpg"
+        alt="person doing interactive vr"
+        class="feature__image mobile-image"
+      />
+      <img
+        src="/images/desktop/image-interactive.jpg"
+        alt="person doing interactive vr"
+        class="feature__image desktop-image"
+      />
+      <div class="feature__content">
+        <h2 class="feature__title">The leader in interactive VR</h2>
+        <p class="feature__text">
+          Founded in 2011, Loopstudios has been producing world-class virtual
+          reality projects for some of the best companies around the globe. Our
+          award-winning creations have transformed businesses through digital
+          experiences that bind to their brand.
+        </p>
       </div>
-
-      <div class="creations__card">
-        <h3 class="creations__card__title">Night arcade</h3>
-        <img src="/images/mobile/image-night-arcade.jpg" alt="arcade games" class="creations__card__image mobile-image">
-        <img src="/images/desktop/image-night-arcade.jpg" alt="arcade games" class="creations__card__image desktop-image">
-      </div>
-
-      <div class="creations__card">
-        <h3 class="creations__card__title">Soccer team VR</h3>
-        <img src="/images/mobile/image-soccer-team.jpg" alt="soccer player" class="creations__card__image mobile-image">
-        <img src="/images/desktop/image-soccer-team.jpg" alt="soccer player" class="creations__card__image desktop-image">
-      </div>
-
-      <div class="creations__card">
-        <h3 class="creations__card__title">The grid</h3>
-        <img src="/images/mobile/image-grid.jpg" alt="racing car" class="creations__card__image mobile-image">
-        <img src="/images/desktop/image-grid.jpg" alt="racing car" class="creations__card__image desktop-image">
-      </div>
-
-      <div class="creations__card">
-        <h3 class="creations__card__title">From up above VR</h3>
-        <img src="/images/mobile/image-from-above.jpg" alt="view of road from above" class="creations__card__image mobile-image">
-        <img src="/images/desktop/image-from-above.jpg" alt="view of road from above" class="creations__card__image desktop-image">
-      </div>
-
-      <div class="creations__card">
-        <h3 class="creations__card__title">Pocket borealis</h3>
-        <img src="/images/mobile/image-pocket-borealis.jpg" alt="northern lights in the sky" class="creations__card__image mobile-image">
-        <img src="/images/desktop/image-pocket-borealis.jpg" alt="northern lights in the sky" class="creations__card__image desktop-image">
-      </div>
-
-      <div class="creations__card">
-        <h3 class="creations__card__title">The curiosity</h3>
-        <img src="/images/mobile/image-curiosity.jpg" alt="scene from space" class="creations__card__image mobile-image">
-        <img src="/images/desktop/image-curiosity.jpg" alt="scene from space" class="creations__card__image desktop-image">
-      </div>
-
-      <div class="creations__card">
-        <h3 class="creations__card__title">Make it fisheye</h3>
-        <img src="/images/mobile/image-fisheye.jpg" alt="fisheye view of the sea" class="creations__card__image mobile-image">
-        <img src="/images/desktop/image-fisheye.jpg" alt="fisheye view of the sea" class="creations__card__image desktop-image">
-      </div>
-
     </div>
-  </div>
 
-  <footer class="footer">
-    <img src="/images/logo.svg" alt="loopstudios logo" class="footer__logo">
-    <ul class="footer__links">
-      <a href="#" class="footer__link">About</a>
-      <a href="#" class="footer__link">Careers</a>
-      <a href="#" class="footer__link">Events</a>
-      <a href="#" class="footer__link">Products</a>
-      <a href="#" class="footer__link">Support</a>
-    </ul>
-    <div class="footer__socials">
-      <img src="/images/icon-facebook.svg" alt="Facebook icon" class="footer__social-icon">
-      <img src="/images/icon-twitter.svg" alt="Twitter icon" class="footer__social-icon">
-      <img src="/images/icon-pinterest.svg" alt="Pinterest icon" class="footer__social-icon">
-      <img src="/images/icon-instagram.svg" alt="Instagram icon" class="footer__social-icon">
+    <div class="creations">
+      <h2 class="creations__title">Our creations</h2>
+      <button class="creations__button">See all</button>
+      <div class="creations__cards">
+        <div class="creations__card">
+          <h3 class="creations__card__title">Deep earth</h3>
+          <img
+            src="/images/mobile/image-deep-earth.jpg"
+            alt="earth"
+            class="creations__card__image mobile-image"
+          />
+          <img
+            src="/images/desktop/image-deep-earth.jpg"
+            alt="earth"
+            class="creations__card__image desktop-image"
+          />
+        </div>
+
+        <div class="creations__card">
+          <h3 class="creations__card__title">Night arcade</h3>
+          <img
+            src="/images/mobile/image-night-arcade.jpg"
+            alt="arcade games"
+            class="creations__card__image mobile-image"
+          />
+          <img
+            src="/images/desktop/image-night-arcade.jpg"
+            alt="arcade games"
+            class="creations__card__image desktop-image"
+          />
+        </div>
+
+        <div class="creations__card">
+          <h3 class="creations__card__title">Soccer team VR</h3>
+          <img
+            src="/images/mobile/image-soccer-team.jpg"
+            alt="soccer player"
+            class="creations__card__image mobile-image"
+          />
+          <img
+            src="/images/desktop/image-soccer-team.jpg"
+            alt="soccer player"
+            class="creations__card__image desktop-image"
+          />
+        </div>
+
+        <div class="creations__card">
+          <h3 class="creations__card__title">The grid</h3>
+          <img
+            src="/images/mobile/image-grid.jpg"
+            alt="racing car"
+            class="creations__card__image mobile-image"
+          />
+          <img
+            src="/images/desktop/image-grid.jpg"
+            alt="racing car"
+            class="creations__card__image desktop-image"
+          />
+        </div>
+
+        <div class="creations__card">
+          <h3 class="creations__card__title">From up above VR</h3>
+          <img
+            src="/images/mobile/image-from-above.jpg"
+            alt="view of road from above"
+            class="creations__card__image mobile-image"
+          />
+          <img
+            src="/images/desktop/image-from-above.jpg"
+            alt="view of road from above"
+            class="creations__card__image desktop-image"
+          />
+        </div>
+
+        <div class="creations__card">
+          <h3 class="creations__card__title">Pocket borealis</h3>
+          <img
+            src="/images/mobile/image-pocket-borealis.jpg"
+            alt="northern lights in the sky"
+            class="creations__card__image mobile-image"
+          />
+          <img
+            src="/images/desktop/image-pocket-borealis.jpg"
+            alt="northern lights in the sky"
+            class="creations__card__image desktop-image"
+          />
+        </div>
+
+        <div class="creations__card">
+          <h3 class="creations__card__title">The curiosity</h3>
+          <img
+            src="/images/mobile/image-curiosity.jpg"
+            alt="scene from space"
+            class="creations__card__image mobile-image"
+          />
+          <img
+            src="/images/desktop/image-curiosity.jpg"
+            alt="scene from space"
+            class="creations__card__image desktop-image"
+          />
+        </div>
+
+        <div class="creations__card">
+          <h3 class="creations__card__title">Make it fisheye</h3>
+          <img
+            src="/images/mobile/image-fisheye.jpg"
+            alt="fisheye view of the sea"
+            class="creations__card__image mobile-image"
+          />
+          <img
+            src="/images/desktop/image-fisheye.jpg"
+            alt="fisheye view of the sea"
+            class="creations__card__image desktop-image"
+          />
+        </div>
+      </div>
     </div>
-    <p class="footer__text">© 2021 Loopstudios. All rights reserved.</p>
-  </footer>
 
-  <script src="/app.js"></script>
-</body>
+    <footer class="footer">
+      <img src="/images/logo.svg" alt="loopstudios logo" class="footer__logo" />
+      <ul class="footer__links">
+        <a href="#" class="footer__link">About</a>
+        <a href="#" class="footer__link">Careers</a>
+        <a href="#" class="footer__link">Events</a>
+        <a href="#" class="footer__link">Products</a>
+        <a href="#" class="footer__link">Support</a>
+      </ul>
+      <div class="footer__socials">
+        <img
+          src="/images/icon-facebook.svg"
+          alt="Facebook icon"
+          class="footer__social-icon"
+        />
+        <img
+          src="/images/icon-twitter.svg"
+          alt="Twitter icon"
+          class="footer__social-icon"
+        />
+        <img
+          src="/images/icon-pinterest.svg"
+          alt="Pinterest icon"
+          class="footer__social-icon"
+        />
+        <img
+          src="/images/icon-instagram.svg"
+          alt="Instagram icon"
+          class="footer__social-icon"
+        />
+      </div>
+      <p class="footer__text">© 2021 Loopstudios. All rights reserved.</p>
+    </footer>
+
+    <script src="/app.js"></script>
+  </body>
 </html>
