Fixed HTML and hero

--- a/index.html
+++ b/index.html
@@ -186,13 +186,13 @@
 
     <footer class="footer">
       <img src="/images/logo.svg" alt="loopstudios logo" class="footer__logo" />
-      <ul class="footer__links">
+      <div class="footer__links">
         <a href="#" class="footer__link">About</a>
         <a href="#" class="footer__link">Careers</a>
         <a href="#" class="footer__link">Events</a>
         <a href="#" class="footer__link">Products</a>
         <a href="#" class="footer__link">Support</a>
-      </ul>
+      </div>
       <div class="footer__socials">
         <img
           src="/images/icon-facebook.svg"
